--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+
     <title>Document</title>
   </head>
   <body>
@@ -13,7 +14,9 @@
       </div>
 
       <section class="imputBox">
-        <div><input class="imputPlaceholder" type="text" placeholder="cosa ti manca?" /> <button class="checkBtn"></button></div>
+        <div>
+          <input class="imputPlaceholder" type="text" placeholder="cosa ti manca?" /> <button class="checkBtn"><i class="fa-solid fa-check"></i></button>
+        </div>
       </section>
 
       <div class="storageBox">
@@ -22,5 +25,6 @@
 
       <script src="index.js"></script>
     </main>
+    <script src="https://kit.fontawesome.com/e6a7b67a01.js" crossorigin="anonymous"></script>
   </body>
 </html>
